[package]
name = "rmule"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dirs = "4.0"
pico-args = "0.5"
rusqlite = { version = "0.28.0", features = ["bundled"] }
single-instance = "0.3"
time = { version = "0.3", features = [ ] }
tokio = { version = "1.22", features = ["full", "tracing" ] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
nom = "7.1"
reqwest = { version = "0.11", features = ["blocking"] }
futures = "0.3"

#serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
