[workspace]
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1.22", features = ["full", "tracing" ] }
tracing = "0.1.37"

[profile.dev.package."*"]
# Build dependencies in optimised mode.
opt-level = 3

[profile.dev]
# Turn on a small amount of optimisation in development mode.
opt-level = 1


[profile.release]
lto = true
codegen-units = 1
opt-level = 3

