[package]
name = "rmule"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bitflags = "1.3"
byteorder = "1.4"
dirs = "4.0"
futures = "0.3"
reqwest = { version = "0.11", features = ["blocking"] }
rusqlite = { version = "0.28.0", features = ["bundled", "time", "blob"] }
time = { version = "0.3", features = ["std", "local-offset"] }
tokio = { version = "1.22", features = ["full", "tracing" ] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
