[package]
name = "rmulegui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmule = { path = "../rmule" }
tokio = { version = "1.22", features = ["full", "tracing" ] }
anyhow = "1.0"
tracing = "0.1.37"
pico-args = "0.5"
single-instance = "0.3"
